; ModuleID = '/home/carl/AnghaBench/linux/arch/ia64/kernel/extr_salinfo.c_salinfo_timeout_check.c'
source_filename = "/home/carl/AnghaBench/linux/arch/ia64/kernel/extr_salinfo.c_salinfo_timeout_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.salinfo_data = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.salinfo_data*)* @salinfo_timeout_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @salinfo_timeout_check(%struct.salinfo_data* %0) #0 {
  %2 = alloca %struct.salinfo_data*, align 8
  store %struct.salinfo_data* %0, %struct.salinfo_data** %2, align 8
  %3 = load %struct.salinfo_data*, %struct.salinfo_data** %2, align 8
  %4 = getelementptr inbounds %struct.salinfo_data, %struct.salinfo_data* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %17

8:                                                ; preds = %1
  %9 = load %struct.salinfo_data*, %struct.salinfo_data** %2, align 8
  %10 = getelementptr inbounds %struct.salinfo_data, %struct.salinfo_data* %9, i32 0, i32 1
  %11 = call i32 @cpumask_empty(i32* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %8
  %14 = load %struct.salinfo_data*, %struct.salinfo_data** %2, align 8
  %15 = getelementptr inbounds %struct.salinfo_data, %struct.salinfo_data* %14, i32 0, i32 0
  %16 = call i32 @wake_up_interruptible(i32* %15)
  br label %17

17:                                               ; preds = %7, %13, %8
  ret void
}

declare dso_local i32 @cpumask_empty(i32*) #1

declare dso_local i32 @wake_up_interruptible(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
